--- a/collect-boot/src/main/resources/application.yml
+++ b/collect-boot/src/main/resources/application.yml
@@ -2,10 +2,12 @@
 server:
     tomcat:
     #    uri-encoding: UTF-8
-        max-threads: 1000
-        max-connections: 2000
+        max-threads: 300
+        max-connections: 1000
     #    min-spare-threads: 30
+        accept-count: 300
     port: 9090
+    connection-timeout: 20000
     #context-path: /collect
     jetty:
       acceptors: 2
