--- a/collect-boot/pom.xml
+++ b/collect-boot/pom.xml
@@ -47,7 +47,16 @@
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-jetty</artifactId>-->
 <!--        </dependency>-->
-
+		<dependency>
+			    <groupId>com.jcraft</groupId>
+			    <artifactId>jsch</artifactId>
+			    <version>0.1.54</version>
+			</dependency>
+			<dependency>
+			    <groupId>ch.ethz.ganymed</groupId>
+			    <artifactId>ganymed-ssh2</artifactId>
+			    <version>build210</version>
+			</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
