--- a/collect-module-common/pom.xml
+++ b/collect-module-common/pom.xml
@@ -45,7 +45,10 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
         
-        
+        <dependency>
+            <groupId>com.hufm</groupId>
+            <artifactId>hufm-module-api</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.hufm</groupId>
             <artifactId>hufm-module-common</artifactId>
@@ -85,6 +88,17 @@
             <groupId>com.aliyun</groupId>
             <artifactId>aliyun-java-sdk-core</artifactId>
             <version>3.2.8</version>
+        </dependency>
+        
+        
+        
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
         </dependency>
 
     </dependencies>
