--- a/collect-module-iot/pom.xml
+++ b/collect-module-iot/pom.xml
@@ -233,6 +233,18 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.2</version>
         </dependency>
+        
+        
+        <dependency>
+            <groupId>com.tzj</groupId>
+            <artifactId>collect-module-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.tzj</groupId>
+            <artifactId>collect-module-common</artifactId>
+        </dependency>
+        
+        
     </dependencies>
 
     <build>
