--- a/collect-module-dailyda-boot/pom.xml
+++ b/collect-module-dailyda-boot/pom.xml
@@ -140,6 +140,18 @@
             <groupId>com.tzj</groupId>
             <artifactId>collect-module-dailyda</artifactId>
         </dependency>
+        
+        
+        <dependency>
+            <groupId>com.tzj</groupId>
+            <artifactId>collect-module-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.tzj</groupId>
+            <artifactId>collect-module-common</artifactId>
+        </dependency>
+        
+        
     </dependencies>
 
     <build>
