--- a/collect-module-api/pom.xml
+++ b/collect-module-api/pom.xml
@@ -67,6 +67,11 @@
             <groupId>com.tzj</groupId>
             <artifactId>collect-module-common</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
