--- a/collect-module-core/pom.xml
+++ b/collect-module-core/pom.xml
@@ -55,6 +55,17 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- mqtt + mq -->
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
     </dependencies>
 
 </project>
