--- a/collect-module-common/pom.xml
+++ b/collect-module-common/pom.xml
@@ -101,6 +101,18 @@
             <artifactId>jedis</artifactId>
         </dependency>
 
+
+        <!-- mqtt + mq -->
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
     </dependencies>
 
 </project>
