--- a/collect-module-iot/pom.xml
+++ b/collect-module-iot/pom.xml
@@ -243,8 +243,22 @@
             <groupId>com.tzj</groupId>
             <artifactId>collect-module-common</artifactId>
         </dependency>
-        
-        
+        <!-- mqtt + mq -->
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tzj</groupId>
+            <artifactId>collect-module-core</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
