--- a/collect-module-core/pom.xml
+++ b/collect-module-core/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>collect-module-core</artifactId>
 
     <dependencies>
+        
+        
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.tzj</groupId>
             <artifactId>collect-module-common</artifactId>
