--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,9 @@
         <alipay-sdk.version>3.7.151.ALL</alipay-sdk.version>
         <!--打包增加时间版本-->
         <maven.build.timestamp.format>MMdd</maven.build.timestamp.format>
+        
+        <jaskjson.version>2.9.9</jaskjson.version>
+        <dubbo.version>2.7.4.1</dubbo.version>
     </properties>
 
     <dependencyManagement>
@@ -128,17 +131,17 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
-                <version>2.9.9</version>
+                <version>${jaskjson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.9.9</version>
+                <version>${jaskjson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
-                <version>2.9.9</version>
+                <version>${jaskjson.version}</version>
             </dependency>
             <!-- JSON -->
 
@@ -154,11 +157,6 @@
                 <artifactId>collect-module-dailyda</artifactId>
                 <version>${project.version}</version>
             </dependency>
-
-
-
-
-
             <dependency>
                 <groupId>com.tzj</groupId>
                 <artifactId>collect-module-common</artifactId>
