--- a/collect-boot/pom.xml
+++ b/collect-boot/pom.xml
@@ -239,11 +239,11 @@
             <artifactId>aliyun-java-sdk-push</artifactId>
             <version>3.10.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-core</artifactId>
-            <version>3.2.8</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.aliyun</groupId>-->
+<!--            <artifactId>aliyun-java-sdk-core</artifactId>-->
+<!--            <version>3.2.8</version>-->
+<!--        </dependency>-->
 
         <!--添加导入/出表格依赖-->
         <dependency>
@@ -280,11 +280,11 @@
             <artifactId>aliyun-java-sdk-core</artifactId>
             <version>4.1.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-dyplsapi</artifactId>
-            <version>1.1.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.aliyun</groupId>-->
+<!--            <artifactId>aliyun-java-sdk-dyplsapi</artifactId>-->
+<!--            <version>1.1.1</version>-->
+<!--        </dependency>-->
 
 
 
