--- a/collect-module-common/pom.xml
+++ b/collect-module-common/pom.xml
@@ -84,11 +84,11 @@
             <artifactId>aliyun-java-sdk-push</artifactId>
             <version>3.10.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-core</artifactId>
-            <version>3.2.8</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.aliyun</groupId>-->
+<!--            <artifactId>aliyun-java-sdk-core</artifactId>-->
+<!--            <version>3.2.8</version>-->
+<!--        </dependency>-->
         
         
         
