--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
         <maven.build.timestamp.format>MMdd</maven.build.timestamp.format>
         
         <jaskjson.version>2.9.9</jaskjson.version>
-        <dubbo.version>2.7.4.1</dubbo.version>
+        <dubbo.version>2.6.5</dubbo.version>
+        <dubbo-registry-nacos.version>2.6.7</dubbo-registry-nacos.version>
+        <dubbo-spring-context-support.version>1.0.2</dubbo-spring-context-support.version>
+        <dubbo-spring-boot-starter.version>0.2.1.RELEASE</dubbo-spring-boot-starter.version>
+        <nacos-discovery-spring-boot-starter.version>0.2.1</nacos-discovery-spring-boot-starter.version>
     </properties>
 
     <dependencyManagement>
@@ -212,7 +216,43 @@
                 <version>1.2.2</version>
             </dependency>
 
+            <!-- dubbo + nacos start -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>dubbo-registry-nacos</artifactId>
+                <version>${dubbo-registry-nacos.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>${dubbo.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.spring</groupId>
+                <artifactId>dubbo-spring-context-support</artifactId>
+                <version>${dubbo-spring-context-support.version}</version>
+            </dependency>
+            <!-- dubbo + nacos end -->
+
+            <!-- dubbo + spring-boot + nacos start -->
+            <dependency>
+                <groupId>com.alibaba.boot</groupId>
+                <artifactId>nacos-discovery-spring-boot-starter</artifactId>
+                <version>${nacos-discovery-spring-boot-starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.boot</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>${dubbo-spring-boot-starter.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.alibaba</groupId>
+                        <artifactId>dubbo</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
         </dependencies>
+        <!-- nacos + springboot + nacos end -->
     </dependencyManagement>
 
 </project>
