--- a/collect-module-flcx-boot/src/main/resources/dubbo-config.properties
+++ b/collect-module-flcx-boot/src/main/resources/dubbo-config.properties
@@ -3,4 +3,4 @@ dubbo.registry.address = nacos://172.19.182.94:8848
 
 dubbo.protocol.name = dubbo
 dubbo.protocol.port = -1
-provider.application.name = flcx-dubbo-application
+flcx.service.version = 0.0.1
