--- a/collect-module-flcx/src/main/resources/dubbo-config.properties
+++ b/collect-module-flcx/src/main/resources/dubbo-config.properties
@@ -3,3 +3,4 @@ dubbo.registry.address = nacos://172.19.182.94:8848
 
 dubbo.protocol.name = dubbo
 dubbo.protocol.port = -1
+flcx.service.version = 0.0.1
