--- a/collect-module-core/src/main/resources/application-init.yml
+++ b/collect-module-core/src/main/resources/application-init.yml
@@ -11,4 +11,4 @@ isOpenTransferThread: false
 notifyUrl: http://shoubeics.mayishoubei.com/notify/alipay
 #中转站Url
 #stationUrl: http://station.mayishoubei.com/admin/api
-stationUrl: http://localhost:9001/admin/api
+stationUrl: http://172.19.182.84:9001/admin/api
