--- a/collect-module-iot/pom.xml
+++ b/collect-module-iot/pom.xml
@@ -234,6 +234,11 @@
             <groupId>com.tzj</groupId>
             <artifactId>collect-module-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.android.service</artifactId>
+            <version>1.1.1</version>
+        </dependency>
 
     </dependencies>
 
