--- a/collect-boot/pom.xml
+++ b/collect-boot/pom.xml
@@ -311,7 +311,7 @@
     </properties>
 
     <build>
-        <finalName>collect-boot-${maven.build.timestamp}</finalName>
+        <finalName>collect-boot</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
