--- a/collect-green/green-boot/src/main/resources/application-dynamicdb.yml
+++ b/collect-green/green-boot/src/main/resources/application-dynamicdb.yml
@@ -24,9 +24,9 @@ spring:
 #          url: jdbc:mysql://rm-uf6aj80zy36o1mb10.mysql.rds.aliyuncs.com/shoubei?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
 #          username: sb_admin
 #          password: shoubei_123
-          url: jdbc:mysql://172.19.182.62:3306/collect?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
-          username: devuser
-          password: dev123456@1
+          url: jdbc:mysql://rm-uf606z8a14q0m0nv3.mysql.rds.aliyuncs.com/point_merchant?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
+          username: wangcan
+          password: Wangcan123
           driver-class-name: com.mysql.cj.jdbc.Driver
           #driver-class-name: com.mysql.jdbc.Driver
 
