--- a/collect-module-core/src/main/resources/application-init.yml
+++ b/collect-module-core/src/main/resources/application-init.yml
@@ -10,5 +10,5 @@ isOpenTransferThread: true
 #notifyUrl: http://open.mayishoubei.com/notify/alipay
 notifyUrl: http://shoubeics.mayishoubei.com/notify/alipay
 #中转站Url
-#stationUrl: http://172.19.182.58:9001/app/api
+#stationUrl: http://api.station.mayishoubei.com/app/api
 stationUrl: http://172.19.182.84:9001/admin/api
