--- a/collect-module-flcx-boot/src/main/resources/dubbo-config.properties
+++ b/collect-module-flcx-boot/src/main/resources/dubbo-config.properties
@@ -1,6 +1,6 @@
 dubbo.application.name = flcx-dubbo-application
 dubbo.registry.address = nacos://172.19.182.94:8848
-
+dubbo.consumer.check=false
 dubbo.protocol.name = dubbo
 dubbo.protocol.port = -1
 flcx.service.version = 0.0.1
