--- a/collect-module-flcx-boot/src/main/resources/application.yml
+++ b/collect-module-flcx-boot/src/main/resources/application.yml
@@ -107,5 +107,5 @@ logging:
   level:
     org.springfromework.web: warn
     org.hibernate: error
-    com.tzj: info
-    com.tzj.collect.mapper: debug
+#    com.tzj: info
+#    com.tzj.collect.mapper: debug
