--- a/collect-module-core/src/main/resources/application-init.yml
+++ b/collect-module-core/src/main/resources/application-init.yml
@@ -7,8 +7,8 @@ isWuGongJin: true
 #是否开启转账线程
 isOpenTransferThread: true
 #是否是正式支付通知
-#notifyUrl: http://open.mayishoubei.com/notify/alipay
-notifyUrl: http://shoubeics.mayishoubei.com/notify/alipay
+notifyUrl: http://open.mayishoubei.com/notify/alipay
+#notifyUrl: http://shoubeics.mayishoubei.com/notify/alipay
 #中转站Url
-#stationUrl: http://api.station.mayishoubei.com/app/api
-stationUrl: http://172.19.182.84:9001/admin/api
+stationUrl: http://api.station.mayishoubei.com/app/api
+#stationUrl: http://172.19.182.84:9001/admin/api
