--- a/collect-green/green-core/pom.xml
+++ b/collect-green/green-core/pom.xml
@@ -79,6 +79,11 @@
             <version>3.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
@@ -101,6 +106,12 @@
             <artifactId>aliyun-java-sdk-core</artifactId>
             <version>4.1.0</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.tencent</groupId>
+            <artifactId>xinge</artifactId>
+            <version>1.1.8</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
