--- a/collect-idle-fish/pom.xml
+++ b/collect-idle-fish/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>collect-idle-fish</artifactId>
     <dependencies>
         <dependency>
+            <groupId>com.taobao</groupId>
+            <artifactId>taobao-sdk-java</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
