--- a/collect-idle-fish/pom.xml
+++ b/collect-idle-fish/pom.xml
@@ -12,9 +12,14 @@
     <artifactId>collect-idle-fish</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.taobao</groupId>
-            <artifactId>taobao-sdk-java</artifactId>
-            <version>1.0.0</version>
+            <groupId>tzj.taobao</groupId>
+            <artifactId>taobao.sdk.java</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>tzj.taobao</groupId>
+            <artifactId>taobao.sdk.source</artifactId>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
