--- a/collect-idle-fish/pom.xml
+++ b/collect-idle-fish/pom.xml
@@ -69,6 +69,16 @@
             <version>20160607</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun.openservices</groupId>
+            <artifactId>ons-client</artifactId>
+            <version>1.7.9.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
