--- a/collect-boot/pom.xml
+++ b/collect-boot/pom.xml
@@ -302,7 +302,16 @@
             <groupId>com.tzj</groupId>
             <artifactId>collect-module-core</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.qimen</groupId>
+            <artifactId>taobao-qimen-sdk</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun.openservices</groupId>
+            <artifactId>ons-client</artifactId>
+            <version>1.7.9.Final</version>
+        </dependency>
     </dependencies>
     <properties>
         <timestamp>${maven.build.timestamp}</timestamp>
