--- a/collect-green/green-boot/pom.xml
+++ b/collect-green/green-boot/pom.xml
@@ -155,6 +155,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>point-company</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
