--- a/collect-module-core/pom.xml
+++ b/collect-module-core/pom.xml
@@ -107,5 +107,11 @@
             <version>4.1.0</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.qimen</groupId>
+            <artifactId>taobao-qimen-sdk</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
