--- a/collect-green/green-boot/src/main/resources/application-dynamicdb.yml
+++ b/collect-green/green-boot/src/main/resources/application-dynamicdb.yml
@@ -21,9 +21,9 @@ spring:
       primary: master #设置默认的数据源或者数据源组,默认值即为master,如果你主从默认下主库的名称就是master可不定义此项。
       datasource:
         master:
-#          url: jdbc:mysql://rm-uf6aj80zy36o1mb10.mysql.rds.aliyuncs.com/shoubei?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
-#          username: sb_admin
-#          password: shoubei_123
+#          url: jdbc:mysql://rm-uf6h8hr3816b6g24g.mysql.rds.aliyuncs.com/point_merchant?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
+#          username: wangcan
+#          password: Wangcan123
           url: jdbc:mysql://rm-uf6aj80zy36o1mb10.mysql.rds.aliyuncs.com/sb_pointcompany?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
           username: wangcan
           password: Wangcan123
