--- a/collect-module-core/src/main/resources/application-init.yml
+++ b/collect-module-core/src/main/resources/application-init.yml
@@ -14,3 +14,5 @@ notifyUrl: http://shoubeics.mayishoubei.com/notify/alipay
 #中转站Url
 #stationUrl: http://api.station.mayishoubei.com/app/api
 stationUrl: http://172.19.182.84:9001/admin/api
+#铸乾授权给2017022805948218这个账号的token
+authToken: 202004BBc31d3ee0ff544085bce8677abdeffX05
