--- a/collect-green/green-boot/pom.xml
+++ b/collect-green/green-boot/pom.xml
@@ -153,6 +153,11 @@
             <artifactId>green-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>3.3</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>point-company</finalName>
