--- a/collect-green/green-boot/src/main/resources/application.yml
+++ b/collect-green/green-boot/src/main/resources/application.yml
@@ -43,11 +43,11 @@ spring:
     #open: false  # 是否开启redis缓存  true开启   false关闭
     #database: 0
     # 正式地址
-    #host: r-uf6crus7stfo0npql7.redis.rds.aliyuncs.com
+    host: r-uf6crus7stfo0npql7.redis.rds.aliyuncs.com
     # 测试地址
-    host: 172.19.193.25
+    #host: 172.19.193.25
     # 测试6370 正式6379
-    port: 6370
+    port: 6379
     password: sb_123456      # 密码（默认为空）
     timeout: 1000  # 连接超时时长（毫秒）
     jedis:
