--- a/collect-module-core/pom.xml
+++ b/collect-module-core/pom.xml
@@ -93,8 +93,11 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
         </dependency>
-        
-        
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
         
         <dependency>
             <groupId>com.alipay</groupId>
