--- a/collect-module-flcx/src/main/resources/application-dynamicdb-test.yml
+++ b/collect-module-flcx/src/main/resources/application-dynamicdb-test.yml
@@ -21,20 +21,8 @@ spring:
       primary: master #设置默认的数据源或者数据源组,默认值即为master,如果你主从默认下主库的名称就是master可不定义此项。
       datasource:
         master:
-          url: jdbc:mysql://47.103.192.72:3306/collect?useUnicode=true&characterEncoding=UTF-8
-          username: devuser
-          password: dev123456@1
-          driver-class-name: com.mysql.cj.jdbc.Driver
-          #driver-class-name: com.mysql.jdbc.Driver
-        slave_1:
-          url: jdbc:mysql://47.103.192.72:3306/collect?useUnicode=true&characterEncoding=UTF-8
-          username: devuser
-          password: dev123456@1
-          driver-class-name: com.mysql.cj.jdbc.Driver
-          #driver-class-name: com.mysql.jdbc.Driver
-        slave_2:
-          url: jdbc:mysql://47.103.192.72:3306/collect?useUnicode=true&characterEncoding=UTF-8
-          username: devuser
-          password: dev123456@1
+          url: jdbc:mysql://rm-uf6h8hr3816b6g24g.mysql.rds.aliyuncs.com/collect?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
+          username: wangcan
+          password: Wangcan123
           driver-class-name: com.mysql.cj.jdbc.Driver
           #driver-class-name: com.mysql.jdbc.Driver
