--- a/collect-module-flcx/src/main/resources/application.yml
+++ b/collect-module-flcx/src/main/resources/application.yml
@@ -86,11 +86,11 @@ mybatis-plus:
     #逻辑删除配置
     logic-delete-value: 0
     logic-not-delete-value: 1
-    #meta-object-handler: com.tzj.collect.common.handler.BaseMetaObjectHandler
+    meta-object-handler: com.tzj.collect.common.handler.BaseMetaObjectHandler
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false
-
+    ##log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 #热部署配置
 devtools:
   livereload:
