蚂蚁森林更换

--- a/collect-module-core/pom.xml
+++ b/collect-module-core/pom.xml
@@ -121,5 +121,14 @@
             <artifactId>taobao.gongyi</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-pay</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+        </dependency>
     </dependencies>
 </project>
