--- a/collect-boot/pom.xml
+++ b/collect-boot/pom.xml
@@ -324,6 +324,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-pay</artifactId>
+        </dependency>
     </dependencies>
     <properties>
         <timestamp>${maven.build.timestamp}</timestamp>
