--- a/collect-boot/src/main/resources/application-dev.yml
+++ b/collect-boot/src/main/resources/application-dev.yml
@@ -27,12 +27,13 @@ spring:
 
 
 
+#微信异步通知地
+wxNotifyUrl: http://shoubeics.mayishoubei.com/notify/wx
 
-
-
-
-
-
+alipay:
+  public-cert: /Users/xiangzhongguo/Downloads/证书/alipayCertPublicKey_RSA2.crt
+  root-cert: /Users/xiangzhongguo/Downloads/证书/alipayRootCert.crt
+  app-cert: /Users/xiangzhongguo/Downloads/证书/appCertPublicKey.crt
 
 
 
