--- a/collect-boot/src/main/resources/application-dynamicdb-pro.yml
+++ b/collect-boot/src/main/resources/application-dynamicdb-pro.yml
@@ -47,3 +47,11 @@ spring:
     username: rabbitadmin
     password: FeiLei@123
     publisher-confirms: false
+
+#微信异步通知地
+wxNotifyUrl: https://open.mayishoubei.com/notify/wx
+
+alipay:
+  public-cert: /Users/xiangzhongguo/Downloads/证书/alipayCertPublicKey_RSA2.crt
+  root-cert: /Users/xiangzhongguo/Downloads/证书/alipayRootCert.crt
+  app-cert: /Users/xiangzhongguo/Downloads/证书/appCertPublicKey.crt
