--- a/collect-module-dailyda-boot/pom.xml
+++ b/collect-module-dailyda-boot/pom.xml
@@ -132,9 +132,8 @@
 
         <!-- 自身模块 -->
         <dependency>
-            <groupId>com.alipay</groupId>
-            <artifactId>alipay-sdk</artifactId>
-            <version>${alipay-sdk.version}</version>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
         </dependency>
         <dependency>
             <groupId>com.tzj</groupId>
