--- a/collect-module-dailyda/pom.xml
+++ b/collect-module-dailyda/pom.xml
@@ -66,9 +66,8 @@
             <version>1.5.3.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>com.alipay</groupId>
-            <artifactId>alipay-sdk</artifactId>
-            <version>${alipay-sdk.version}</version>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
         </dependency>
         <!-- API 框架 -->
         <dependency>
