--- a/collect-module-flcx/pom.xml
+++ b/collect-module-flcx/pom.xml
@@ -108,9 +108,8 @@
 
         <!-- 自身模块 -->
         <dependency>
-            <groupId>com.alipay</groupId>
-            <artifactId>alipay-sdk</artifactId>
-            <version>${alipay-sdk.version}</version>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
         </dependency>
         <!-- API 框架 -->
         <dependency>
