--- a/collect-module-iot/src/main/resources/application-dynamicdb-pro.yml
+++ b/collect-module-iot/src/main/resources/application-dynamicdb-pro.yml
@@ -47,3 +47,9 @@ spring:
     username: rabbitadmin
     password: FeiLei@123
     publisher-confirms: false
+
+
+alipay:
+  public-cert: /Users/xiangzhongguo/Downloads/证书/alipayCertPublicKey_RSA2.crt
+  root-cert: /Users/xiangzhongguo/Downloads/证书/alipayRootCert.crt
+  app-cert: /Users/xiangzhongguo/Downloads/证书/appCertPublicKey.crt
