--- a/collect-module-iot4/src/main/resources/application-dynamicdb-test.yml
+++ b/collect-module-iot4/src/main/resources/application-dynamicdb-test.yml
@@ -30,3 +30,7 @@ spring:
           driver-class-name: com.mysql.cj.jdbc.Driver
           #driver-class-name: com.mysql.jdbc.Driver
 
+alipay:
+  public-cert: /Users/xiangzhongguo/Downloads/证书/alipayCertPublicKey_RSA2.crt
+  root-cert: /Users/xiangzhongguo/Downloads/证书/alipayRootCert.crt
+  app-cert: /Users/xiangzhongguo/Downloads/证书/appCertPublicKey.crt
