增加回收人员完单限制

--- a/collect-module-task-collect/pom.xml
+++ b/collect-module-task-collect/pom.xml
@@ -46,7 +46,11 @@
         <!-- springboot -->
 
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
