--- a/collect-module-task-flcx/pom.xml
+++ b/collect-module-task-flcx/pom.xml
@@ -78,6 +78,11 @@
             <groupId>com.tzj</groupId>
             <artifactId>collect-module-flcx</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <!-- mybatis-plus begin -->
         <dependency>
