--- a/collect-module-iot4/pom.xml
+++ b/collect-module-iot4/pom.xml
@@ -242,6 +242,11 @@
             <version>1.1.1</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.plumelog</groupId>
+            <artifactId>plumelog-logback</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
