--- a/collect-module-iot4/src/main/resources/application-dynamicdb-pro.yml
+++ b/collect-module-iot4/src/main/resources/application-dynamicdb-pro.yml
@@ -40,6 +40,6 @@ spring:
           #driver-class-name: com.mysql.jdbc.Driver
 
 alipay:
-  public-cert: /Users/xiangzhongguo/Downloads/证书/alipayCertPublicKey_RSA2.crt
-  root-cert: /Users/xiangzhongguo/Downloads/证书/alipayRootCert.crt
-  app-cert: /Users/xiangzhongguo/Downloads/证书/appCertPublicKey.crt
+  public-cert: /shoubei/alipayCert/alipayCertPublicKey_RSA2.crt
+  root-cert: /shoubei/alipayCert/alipayRootCert.crt
+  app-cert: /shoubei/alipayCert/appCertPublicKey.crt
