--- a/collect-module-core/src/main/resources/application-init.yml
+++ b/collect-module-core/src/main/resources/application-init.yml
@@ -9,7 +9,7 @@ isOpenTransferThread: false
 #是否开启咸鱼订单消费
 isOpenXyConsumer: false
 #是否是正式支付通知
-notifyUrl: http://open.mayishoubei.com/notify/alipay
+notifyUrl: https://open.mayishoubei.com/notify/alipay
 #notifyUrl: http://shoubeics.mayishoubei.com/notify/alipay
 #中转站Url
 stationUrl: http://api.station.mayishoubei.com/app/api
