--- a/collect-boot/src/main/resources/application.yml
+++ b/collect-boot/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
   # 环境 dev|pro || dynamicdb-test 测试多数据源配置 | dynamicdb-pro 正式多数据源配置
   profiles:
     #默认启动测试环境。可以启动应用的时候定当前环境 java -jar myproject.jar --spring.profiles.active = dynamicdb-pro
-    active: dev
+    active: dynamicdb-test
   # cache配置
   cache:
     type: ehcache
@@ -62,7 +62,7 @@ spring:
     prefix: classpath:/templates/
     suffix: .html
     encoding: UTF-8
-    mode: LEGACYHTML5
+    mode: LEGACYHTML5MyMetaObjectHandler
     servlet:
       content-type: text/html
 
