--- a/collect-boot/src/main/resources/application-dev.yml
+++ b/collect-boot/src/main/resources/application-dev.yml
@@ -21,23 +21,15 @@ spring:
       primary: master #设置默认的数据源或者数据源组,默认值即为master,如果你主从默认下主库的名称就是master可不定义此项。
       datasource:
         master:
-          url: jdbc:mysql://rm-uf6aj80zy36o1mb10.mysql.rds.aliyuncs.com/shoubei?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
-          username: sb_admin
-          password: shoubei_123
-          #url: jdbc:mysql://47.103.192.72:3306/collect?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
-          #username: devuser
-          #password: dev123456@1
+          #          url: jdbc:mysql://rm-uf6aj80zy36o1mb10.mysql.rds.aliyuncs.com/shoubei?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
+          #          username: sb_admin
+          #          password: shoubei_123
+          url: jdbc:mysql://rm-uf6h8hr3816b6g24g.mysql.rds.aliyuncs.com/collect?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
+          username: wangcan
+          password: Wangcan123
           driver-class-name: com.mysql.cj.jdbc.Driver
           #driver-class-name: com.mysql.jdbc.Driver
-        slave_1:
-          url: jdbc:mysql://rr-uf6xun0k65f3i09n4.mysql.rds.aliyuncs.com/shoubei?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
-          username: sb_admin
-          password: shoubei_123
-          #url: jdbc:mysql://47.103.192.72:3306/collect?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
-          #username: devuser
-          #password: dev123456@1
-          driver-class-name: com.mysql.cj.jdbc.Driver
-          #driver-class-name: com.mysql.jdbc.Driver
+
   #配置MQ
   rabbitmq:
     host: 106.15.72.157 #内网IP 172.19.182.81
@@ -49,10 +41,9 @@ spring:
 wxNotifyUrl: http://shoubeics.mayishoubei.com/notify/wx
 
 alipay:
-  public-cert: D:\IdeaProjects\mayishoubei-java\key\alipayCertPublicKey_RSA2.crt
-  root-cert: D:\IdeaProjects\mayishoubei-java\key\alipayRootCert.crt
-  app-cert: D:\IdeaProjects\mayishoubei-java\key\appCertPublicKey.crt
-
+  public-cert: /Users/xiangzhongguo/文档/cert/alipay/alipayCertPublicKey_RSA2.crt
+  root-cert: /Users/xiangzhongguo/文档/cert/alipay/alipayRootCert.crt
+  app-cert: /Users/xiangzhongguo/文档/cert/alipay/appCertPublicKey.crt
 
 
 
