--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,12 @@
                 <artifactId>plumelog-logback</artifactId>
                 <version>3.4.2</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.qcloud</groupId>
+                <artifactId>cos_api</artifactId>
+                <version>5.6.89</version>
+            </dependency>
         </dependencies>
 
 
